fix: eliminate white space at the bottom of mobile version

--- a/config/weight_balance/static/weight_balance/styles_input.css
+++ b/config/weight_balance/static/weight_balance/styles_input.css
@@ -8,8 +8,13 @@
 html, body {
     width: 100%;
     height: auto;
-    margin: 0px;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(./img/skylane1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .form-container {
@@ -17,11 +22,6 @@ html, body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(./img/skylane1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -109,7 +109,7 @@ button:hover {
 
 @media screen and (max-width: 570px) {
 
-    * {
+    *, .form-text {
         font-size: 0.85rem;
     }
 
